# ansible-role-deploy-container

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml
defaults/: main.yml
docs/: macos-services-and-cron.md  roadmap.md
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
tasks/: docker.yml  files.yml  main.yml  restart.yml  systemd-deploy-group.yml  systemd-deploy-templates.yml  systemd-deploy.yml  systemd-undeploy-group.yml  systemd-undeploy.yml
templates/: service.launchd.plist.j2  service.launchd.sh.j2  service.systemd.j2  template.env.j2
test/: ansible.cfg  playbook.yml  requirements.yml  task.yml
tmp/: README.md
